multicontainer-pods-with-commands.yaml
apiVersion:  v1
kind:  Pod
metadata:  
  name:  yellow
spec:
  containers:
    - name: lemon
      image: busybox
      command: 
        - sleep
        - "1000"
    - name: gold
      image: redis
