networkpolicy2.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: np
  namespace: space2
spec:
  podSelector: {}
  policyTypes:
  - Ingress
  ingress:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: space1
    - podSelector: {}
